--- a/DissenterShared/ru.lproj/DissenterShared.strings
+++ b/DissenterShared/ru.lproj/DissenterShared.strings
@@ -378,6 +378,9 @@
 /* Grand camera access */
 "GrantCameraAccess" = "Включить камеру";
 
+/* Show Dissenter Help page from the Support section in the settings. */
+"Help" = "Помогите";
+
 /* No comment provided by engineer. */
 "Home" = "Домашняя страница";
 
@@ -510,22 +513,10 @@
 "Private" = "Приватный";
 
 /* No comment provided by engineer. */
-"PrivateBrowsing" = "Приватный просмотр";
+"PrivateBrowsing" = "Частный просмотр включен";
 
 /* Setting to keep app in private mode */
 "PrivateBrowsingOnly" = "Только приватный просмотр";
-
-/* Private tab detail text */
-"PrivateTabDetails" = "Используя приватные вкладки, вы влияете только на то, какую информацию Dissenter сохраняет на вашем устройстве.
-
-Сайты получают ваш IP-адрес автоматически, как только вы заходите на них. При этом они могут определить ваше примерное местоположение — как правило, на уровне города. Иногда эти данные могут быть точнее. Кроме того, сайты сохраняют всю вводимую вами информацию, например поисковые запросы. Если вы войдете в систему, им будет известно, что вы являетесь владельцем этой учетной записи. При закрытии приватных вкладок вы автоматически выйдете из аккаунта, так как Dissenter удалит файлы cookie, необходимые для того, чтобы оставаться в системе.
-
-Ваши действия в сети может отслеживать интернет-провайдер. Как правило, это оператор мобильной связи либо владелец сети Wi-Fi или VPN, в зависимости от того, кто предоставляет вам доступ к интернету. Ваш интернет-провайдер видит, какие сайты вы посещаете. Если используется протокол HTTPS, интернет-провайдер сможет лишь догадываться о том, что вы делали на сайте. Если же сайт использует только протокол HTTP, интернет-провайдер сможет узнать всё: какие поисковые запросы вы вводили, какие страницы посещали, по каким ссылкам переходили и т. д.
-
-Использование приватных вкладок вряд ли помешает работодателю узнать, на какие сайты вы заходили, если он управляет вашим устройством. Кроме того, другие люди, у которых есть доступ к вашему устройству, могут установить программу, отслеживающую ваши действия, — приватные вкладки не помогут и в этом случае.";
-
-/* Private tab information link */
-"PrivateTabLink" = "Подробнее о приватных вкладках…";
 
 /* Default engine for private search. */
 "PrivateTabSearch" = "Приватная вкладка";
@@ -687,10 +678,7 @@
 "ShareLinkActionTitle" = "Поделиться ссылкой";
 
 /* shields overview message */
-"ShieldsOverview" = "Щиты сайтов Shields позволяют контролировать блокировку рекламы и трекеров для каждого сайта, на который вы заходите. Если вы хотите видеть рекламу только на определенных сайтах, включите эту функцию ниже.";
-
-/* shields overview footer message */
-"ShieldsOverviewFooter" = "Примечание. Поскольку некоторым сайтам для работы необходимы скрипты, эта функция по умолчанию отключена.";
+"ShieldsOverview" = "Щиты веб-сайта Dissenter позволяют контролировать блокировку рекламы и трекеров для каждого посещаемого вами сайта.";
 
 /* Time Saved Days */
 "ShieldsTimeStatsDays" = "дн.";
