--- a/DissenterShared/uk.lproj/DissenterShared.strings
+++ b/DissenterShared/uk.lproj/DissenterShared.strings
@@ -377,6 +377,9 @@
 /* Grand camera access */
 "GrantCameraAccess" = "Увімкнути камеру";
 
+/* Show Dissenter Help page from the Support section in the settings. */
+"Help" = "Довідка";
+
 /* No comment provided by engineer. */
 "Home" = "Домашня сторінка";
 
@@ -509,22 +512,10 @@
 "Private" = "Приватний";
 
 /* No comment provided by engineer. */
-"PrivateBrowsing" = "Перегляд у приватному режимі";
+"PrivateBrowsing" = "Приватний перегляд увімкнено";
 
 /* Setting to keep app in private mode */
 "PrivateBrowsingOnly" = "Перегляд тільки у приватному режимі";
-
-/* Private tab detail text */
-"PrivateTabDetails" = "Використання приватних вкладок впливає лише на роботу Dissenter на вашому пристрої та не впливає на дії поза вашим пристроєм.
-              
-              Інформація про вашу IP-адресу завжди передається на веб-сайти, завдяки чому можна визначити ваше розташування. Зазвичай це місто, але інколи результати відстеження розташування можуть бути більш точними. Також веб-сайти мають доступ до всієї інформації, яку ви вводите, наприклад до пошукових запитів. Якщо ви ввійдете до системи на веб-сайті, стане відомо, що ви є власником облікового запису. Коли ви закриєте приватну вкладку, буде виконано вихід з облікового запису, оскільки Dissenter видалить файл cookie, створений під час входу.
-              
-              Компанія, що надає підключення до Інтернету (зазвичай провайдер мережі або власник мереж Wi-Fi чи VPN), може переглядати всю вашу мережеву діяльність і журнал відвідувань сайтів. Якщо на сайті використовується протокол HTTPS, провайдер може лише здогадуватися про ваші дії на сайті. Якщо ж на сайті використовується протокол HTTP, провайдер має інформацію про всі ваші пошукові запити, відвідувані сторінки та посилання.
-              
-              Якщо ваш роботодавець керує вашим пристроєм, то він також може відстежувати ваші дії. Імовірно, використання приватних вкладок не допоможе приховати інформацію про те, які сайти ви відвідували. Крім того, інші люди, що мають доступ до вашого пристрою, можуть також установити програму, що відстежуватиме вашу діяльність. У цьому разі приватні вкладки також вам не допоможуть.";
-
-/* Private tab information link */
-"PrivateTabLink" = "Додаткові відомості щодо приватких вкладок.";
 
 /* Default engine for private search. */
 "PrivateTabSearch" = "Приватна вкладка";
@@ -686,10 +677,7 @@
 "ShareLinkActionTitle" = "Поділитися посиланням";
 
 /* shields overview message */
-"ShieldsOverview" = "Екрани дозволяють керувати блокуванням реклами або трекерів на кожному сайті, який ви переглядаєте. Для перегляду реклами на сайті увімкніть цей параметр тут.";
-
-/* shields overview footer message */
-"ShieldsOverviewFooter" = "Примітка. Деякі сайти потребують скриптів для нормальної роботи. Цей екран вимкнено за замовчуванням.";
+"ShieldsOverview" = "Щитки веб-сайту Dissenter дозволяють контролювати, коли оголошення та трекери блокуються для кожного відвідуваного вами веб-сайту.";
 
 /* Time Saved Days */
 "ShieldsTimeStatsDays" = "дн.";
