--- a/DissenterShared/zh-TW.lproj/DissenterShared.strings
+++ b/DissenterShared/zh-TW.lproj/DissenterShared.strings
@@ -377,6 +377,9 @@
 /* Grand camera access */
 "GrantCameraAccess" = "啟用相機";
 
+/* Show Dissenter Help page from the Support section in the settings. */
+"Help" = "救命";
+
 /* No comment provided by engineer. */
 "Home" = "主畫面";
 
@@ -509,22 +512,10 @@ DuckDuckGo 隱私搜尋";
 "Private" = "隱私";
 
 /* No comment provided by engineer. */
-"PrivateBrowsing" = "隱私瀏覽";
+"PrivateBrowsing" = "啟用隱私瀏覽";
 
 /* Setting to keep app in private mode */
 "PrivateBrowsingOnly" = "僅限隱私瀏覽";
-
-/* Private tab detail text */
-"PrivateTabDetails" = "使用隱私分頁只會變更 Dissenter 可在您裝置上執行的作業，無法改變他人行為。
-
-當您造訪網站時，網站能得知您的 IP 位置。根據這項資訊，網站可以大略猜出您的所在位置，通常能知道您所在的城市，有時猜測的位置會更精確。網站也會收集您明確提供的所有內容，像是搜尋內容。當您登入網站時，網站也會知道您是該帳戶的所有人。若關閉隱私分頁，Dissenter 會捨棄那些協助您保持登入的 Cookie，因此系統依然會將您隨即登出。
-
-提供您網際網路連線的公司 (您的 ISP 業者) 可以查看您在網路上的所有活動。很多時候，這會是您的行動網路業者；如果您使用的是 WiFi 網路，該網路的所有者可以看到您的活動；如果您是使用 VPN 上網，則運作該 VPN 的一方可以看到活動。您的 ISP 業者可以在您造訪網站時，瞭解您瀏覽了哪些網站。如果這些網站使用 HTTPS，ISP 業者只能大略猜測您在網站上的活動；但如果網站僅使用 HTTP，則 ISP 業者可以看到所有活動，包括搜尋內容、讀取的頁面以及追蹤的連結。
-
-如果您的裝置是由雇主所管理，他們可能會追蹤您的裝置使用情形。即使您使用隱私分頁，雇主仍可知道您曾瀏覽過哪些網站。能存取您裝置的其他人士，可能也會安裝軟體以監控您的活動。這類情形下，即使使用隱私分頁，也不會有太大意義。";
-
-/* Private tab information link */
-"PrivateTabLink" = "深入瞭解隱私分頁。";
 
 /* Default engine for private search. */
 "PrivateTabSearch" = "隱私分頁";
@@ -686,10 +677,7 @@ DuckDuckGo 隱私搜尋";
 "ShareLinkActionTitle" = "分享連結";
 
 /* shields overview message */
-"ShieldsOverview" = "「網站防護」可控制您在造訪每個網站時，是否直接封鎖網站上的廣告與追踪器。若您希望在特定網站上顯示廣告，可以在這裡啟用廣告。";
-
-/* shields overview footer message */
-"ShieldsOverviewFooter" = "請注意：部分網站可能需要指令碼才能順利運作，所以此防護機制預設為關閉。";
+"ShieldsOverview" = "Dissenter Website Shields允許您控制何時訪問您訪問的每個網站的廣告和跟踪器。";
 
 /* Time Saved Days */
 "ShieldsTimeStatsDays" = "日";
